feat: added range support for priceSum request
