# docs/swagger.json
@@ -143,7 +143,7 @@
         },
         "/subs/sum": {
             "get": {
-                "description": "Recieving summary subscriptions price with\nprovided filters",
+                "description": "Recieving summary subscriptions price with\nprovided filters and period values (start, end),\nif start or end undefined, returns sum for all the time.",
                 "produces": [
                     "application/json"
                 ],
@@ -157,6 +157,20 @@
                         "example": "Spotify",
                         "description": "Sub's service name",
                         "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "01-2015",
+                        "description": "Start period",
+                        "name": "start",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "03-2016",
+                        "description": "End period",
+                        "name": "end",
                         "in": "query"
                     },
                     {
